--- a/src/components/MapView.css
+++ b/src/components/MapView.css
@@ -16,3 +16,22 @@
     background-color: aqua;
     opacity: 20%;
 }
+
+.pin2 {
+    position: absolute;
+    border-radius: 50%;
+    border: 8px solid #fff;
+    width: 8px;
+    height: 8px;
+  }
+  
+  .pin2::after {
+    position: absolute;
+    content: '';
+    width: 0px;
+    height: 0px;
+    bottom: -30px;
+    left: -6px;
+    border: 10px solid transparent;
+    border-top: 17px solid #fff;
+  }
