--- a/src/pages/AddWarehouse.css
+++ b/src/pages/AddWarehouse.css
@@ -16,6 +16,11 @@
     margin-top: 1%;
 }
 
+.checkModel {
+    margin-top: 1%;
+    align-items: center;
+}
+
 .title {
     font-size: xx-large;
 }
@@ -50,10 +55,9 @@
 
 .input{
     font-size: large;
-    width: 150px;
+    width: 100px;
     height: fit-content;
     align-items: center;
-    margin-bottom: 10px;
     margin-right: 2%;
 }
 
@@ -73,9 +77,14 @@
 
 .rowWarehouse{
     margin-top: 20px;
+    display: flex;
 }
 
 .rowWarehouseSecondary{
     margin-top: 12px;
     margin-left: 20px;
+}
+
+.tooltipIcon{
+    margin-left: 10px;
 }
